# KENBAN-viewer

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  types.ts  utif.d.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: DiffViewer.tsx  GDriveFolderBrowser.tsx  Header.tsx  ParallelViewer.tsx  ScreenshotEditor.tsx  Sidebar.tsx
src/utils/: pdf.ts
